==> chcbaram/stm32f4-dac/firmware/stm32f4-dac-fw/src/hw/driver/i2s.c <==
#include "i2s.h"
#include "cli.h"
#include "gpio.h"
#include "qbuffer.h"
#include "buzzer.h"
#include "es8156.h"
#define I2S_SAMPLERATE_MAX      I2S_AUDIOFREQ_96K
#define I2S_SAMPLERATE_HZ       I2S_AUDIOFREQ_48K
#define I2S_BUF_MS              (4)
#define I2S_BUF_FRAME_LEN       ((I2S_SAMPLERATE_MAX * 2 * I2S_BUF_MS) / 1000)  // 96Khz, Stereo, 4ms
#define I2S_BUF_CNT             16

bool i2sInit(void)
{
  bool ret = true;


  hi2s2.Instance                = SPI2;
  hi2s2.Init.Mode               = I2S_MODE_MASTER_TX;
  hi2s2.Init.Standard           = I2S_STANDARD_PHILIPS;
  hi2s2.Init.DataFormat         = I2S_DATAFORMAT_24B;
  hi2s2.Init.MCLKOutput         = I2S_MCLKOUTPUT_ENABLE;
  hi2s2.Init.AudioFreq          = I2S_SAMPLERATE_HZ;
  hi2s2.Init.CPOL               = I2S_CPOL_LOW;
  hi2s2.Init.ClockSource        = I2S_CLOCK_PLL;
  hi2s2.Init.FullDuplexMode     = I2S_FULLDUPLEXMODE_DISABLE;
  if (HAL_I2S_Init(&hi2s2) != HAL_OK)
  {
    ret = false;
  }

  es8156SetConfig(i2s_sample_rate, i2s_sample_depth);

  qbufferCreateBySize(&i2s_q, (uint8_t *)i2s_q_buf, sizeof(int32_t), I2S_BUF_FRAME_LEN * I2S_BUF_CNT);

  i2s_frame_len = (i2s_sample_rate * 2 * I2S_BUF_MS) / 1000;
  i2s_sample_bytes = hi2s2.Init.DataFormat == I2S_DATAFORMAT_16B ? 2:4;

  i2sCfgLoad();
  i2sStart();

  is_init = ret;

  logPrintf("[%s] i2sInit()\n", ret ? "OK" : "NG");

#ifdef _USE_HW_CLI
  cliAdd("i2s", cliI2s);
#endif

  return ret;
}

bool i2sSetSampleRate(uint32_t freq)
{
  bool ret = true;
  uint32_t frame_len;
  const uint32_t freq_tbl[8] = 
  {
    I2S_AUDIOFREQ_96K,
    I2S_AUDIOFREQ_48K,  
    I2S_AUDIOFREQ_44K,
    I2S_AUDIOFREQ_32K,
    I2S_AUDIOFREQ_22K,
    I2S_AUDIOFREQ_16K,
    I2S_AUDIOFREQ_11K,
    I2S_AUDIOFREQ_8K,
  };

  ret = false;
  for (int i=0; i<8; i++)
  {
    if (freq_tbl[i] == freq)
    {
      ret = true;
      break;
    }
  }
  if (ret != true)
  {
    return false;
  }

  i2sStop();
  

  i2s_sample_rate = freq;
  frame_len = (i2s_sample_rate * 2 * I2S_BUF_MS) / 1000;
  i2s_frame_len = frame_len;

  hi2s2.Init.AudioFreq = freq;
  if (HAL_I2S_Init(&hi2s2) != HAL_OK)
  {
    ret = false;
  }
  i2sStart();

  return ret;
}

bool i2sStart(void)
{
  bool ret = false;
  HAL_StatusTypeDef status;
  I2S_HandleTypeDef *p_i2s = &hi2s2;

  memset(i2s_frame_buf, 0, sizeof(i2s_frame_buf));
  status = HAL_I2S_Transmit_DMA(p_i2s, (uint16_t *)i2s_frame_buf, i2s_frame_len * 2);
  if (status == HAL_OK)
  {
    is_started = true;
  }
  else
  {
    is_started = false;
  }

  return ret;
}

bool i2sStop(void)
{
  is_started = false;
  HAL_I2S_DMAStop(&hi2s2);

  return true;
}

void i2sUpdateBuffer(uint8_t index)
{
  if (qbufferAvailable(&i2s_q) >= i2s_frame_len)
  {    
    qbufferRead(&i2s_q, (uint8_t *)&i2s_frame_buf[index * i2s_frame_len], i2s_frame_len);
    is_busy = true;
  }
  else
  {
    memset(&i2s_frame_buf[index * i2s_frame_len], 0, i2s_frame_len * i2s_sample_bytes);
    is_busy = false;
  }
}
