==> chcbaram/apm32e103-kit/firmware/exam/EX-10-I2S/src/hw/driver/i2s.c <==
#include "i2s.h"
#include "cli.h"
#include "gpio.h"
#include "qbuffer.h"
#include "buzzer.h"
#include "files.h"
#include "mixer.h"
#include "nvs.h"
#include <math.h>
#define I2S_CFG_NAME     "cfg.i2s"
#define _PIN_GPIO_SPK_EN I2S_MUTE
#include "lcd.h"
#define FFT_LEN         512
#define BLOCK_X_CNT     12
#define BLOCK_Y_CNT     12
#define I2S_SAMPLERATE_HZ       16000
#define I2S_BUF_MS              (4)
#define I2S_BUF_LEN             (8*1024)
#define I2S_BUF_FRAME_LEN       ((48000 * 2 * I2S_BUF_MS) / 1000)  // 48Khz, Stereo, 4ms

bool i2sInit(void)
{
  bool ret = true;

  mixerInit(&mixer);
  i2sCfgLoad();

  i2s_frame_len = (i2s_sample_rate * 2 * I2S_BUF_MS) / 1000;


  i2sInitHw();

  i2s_hw.p_cfg->mode       = I2S_MODE_MASTER_TX;
  i2s_hw.p_cfg->standard   = I2S_STANDARD_PHILLIPS;
  i2s_hw.p_cfg->length     = I2S_DATA_LENGHT_16B;
  i2s_hw.p_cfg->MCLKOutput = I2S_MCLK_OUTPUT_DISABLE;
  i2s_hw.p_cfg->audioDiv   = I2S_AUDIO_DIV_16K;
  i2s_hw.p_cfg->polarity   = I2S_CLKPOL_LOW;

  I2S_Config(i2s_hw.h_i2s, i2s_hw.p_cfg);
  

  i2sStart();

  delay(50);
  gpioPinWrite(_PIN_GPIO_SPK_EN, _DEF_HIGH);

  is_init = ret;

  logPrintf("[%s] i2sInit()\n", ret ? "OK" : "NG");
  
#if CLI_USE(HW_I2S)
  cliAdd("i2s", cliI2s);
#endif

  return ret;
}

bool i2sSetSampleRate(uint32_t freq)
{
  bool ret = true;
  uint32_t frame_len;
  const uint32_t freq_tbl[7] = 
  {
    I2S_AUDIO_DIV_48K,  
    I2S_AUDIO_DIV_44K,
    I2S_AUDIO_DIV_32K,
    I2S_AUDIO_DIV_22K,
    I2S_AUDIO_DIV_16K,
    I2S_AUDIO_DIV_11K,
    I2S_AUDIO_DIV_8K,
  };

  ret = false;
  for (int i=0; i<7; i++)
  {
    if (freq_tbl[i] == freq)
    {
      ret = true;
      break;
    }
  }
  if (ret != true)
  {
    return false;
  }

  i2sStop();
  delay(10);

  i2s_sample_rate = freq;
  frame_len = (i2s_sample_rate * 2 * I2S_BUF_MS) / 1000;
  i2s_frame_len = frame_len;


  gpioPinWrite(_PIN_GPIO_SPK_EN, _DEF_LOW);

  i2s_hw.p_cfg->audioDiv   = freq;
  I2S_Config(i2s_hw.h_i2s, i2s_hw.p_cfg);

  i2sStart();

  gpioPinWrite(_PIN_GPIO_SPK_EN, _DEF_HIGH);

  return ret;
}

bool i2sStart(void)
{
  bool ret = false;

  memset(i2s_frame_buf, 0, sizeof(i2s_frame_buf));

  I2S_Disable(i2s_hw.h_i2s);

  i2s_frame_len = (i2s_sample_rate * 2 * I2S_BUF_MS) / 1000;
  i2sUpdateDMA();

  I2S_Enable(i2s_hw.h_i2s);
  SPI_I2S_EnableDMA(i2s_hw.h_i2s, SPI_I2S_DMA_REQ_TX);


  is_started = true;

  return ret;
}

bool i2sStop(void)
{
  is_started = false;
  SPI_I2S_DisableDMA(i2s_hw.h_i2s, SPI_I2S_DMA_REQ_TX);
  I2S_Disable(i2s_hw.h_i2s);

  return true;
}

void i2sUpdateBuffer(uint8_t index)
{
  if (mixerAvailable(&mixer) >= i2s_frame_len)
  {    
    mixerRead(&mixer, &i2s_frame_buf[index * i2s_frame_len], i2s_frame_len);
    is_busy = true;
  }
  else
  {
    memset(&i2s_frame_buf[index * i2s_frame_len], 0, i2s_frame_len * 2);
    is_busy = false;
  }
}
